# ai-ops

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.override.yml  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml  seed_run.py  test_db_minimal.py
backend/alembic/: env.py
backend/alembic/versions/: 0001_agent_output_layer.py  0002_operational_layer.py
backend/app/: config.py  embeddings.py  main.py  vector.py
backend/app/core/: exceptions.py  logging.py  middleware.py
backend/app/db/: session.py
backend/app/db/models/: __init__.py
backend/app/graph/: __init__.py  edges.py  graph.py  hitl_utils.py  runtime.py  state.py
backend/app/graph/nodes/: __init__.py  _react_domain.py  action_agent.py  aggregator.py  assemble_response.py  execute_actions.py  hitl_node.py  intent_classifier.py  inventory_agent.py  join_findings.py  marketing_agent.py  memory_retrieve.py  persist_incident.py  reflection.py  sales_agent.py  support_agent.py  synthesizer.py
backend/app/observability/: __init__.py  tracer.py
backend/app/routers/: actions.py  approve.py  chat.py  health.py  incidents.py  operational.py
backend/app/schemas/: __init__.py
backend/app/tools/: __init__.py  actions.py  adapters.py  base.py  inventory.py  marketing.py  sales.py  support.py
backend/scripts/: test_chat.py  verify_otel.py  verify_seed.py
backend/scripts/seed/: __init__.py  _faker.py  run_seed.py  seed_catalog.py  seed_customers.py  seed_inventory_events.py  seed_marketing.py  seed_memory.py  seed_orders.py  seed_support.py
backend/tests/: conftest.py
backend/tests/integration/: conftest.py  test_action_loop.py  test_api_approve.py  test_api_auth.py  test_api_chat.py  test_diagnostic_pipeline.py  test_execute_actions_idempotency.py  test_graph_compilation.py  test_idempotency.py  test_memory_roundtrip.py  test_sprint2_seed.py  test_tools_db_roundtrip.py
backend/tests/unit/: test_action_tools.py  test_b1_unparseable_output.py  test_b2_synthesizer_fallback.py  test_c9_dispatch_adapter.py  test_edges.py  test_graph_topology_blueprint.py  test_health.py  test_hitl_utils.py  test_reflection.py  test_schemas.py  test_tools_inventory.py  test_tools_marketing.py  test_tools_sales.py  test_tools_support.py
docs/: DECISIONS.md  PROGRESS.md
frontend/: jest.config.js  next.config.ts  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/src/__mocks__/: next-link.tsx  next-navigation.ts
frontend/src/__tests__/: chat-state-machine.test.tsx
frontend/src/app/: globals.css  layout.tsx
frontend/src/app/approvals/: ApprovalsClient.tsx  page.tsx
frontend/src/app/chat/: page.tsx
frontend/src/app/incidents/: page.tsx
frontend/src/app/incidents/[id]/: page.tsx
frontend/src/app/observability/: ObservabilityClient.tsx  page.tsx
frontend/src/components/: AgentTimeline.tsx  ApprovalCard.tsx  BeforeAfterPanel.tsx  ChatInput.tsx  Sidebar.tsx
frontend/src/lib/: api.ts  auth.ts  stream.ts  types.ts  utils.ts
frontend/src/store/: chatStore.ts
infra/: Dockerfile.frontend  docker-compose.override.yml  docker-compose.yml
