[project]
name = "ai-ops-backend"
version = "0.1.0"
description = "AI E-Commerce Operations Brain — LangGraph multi-agent backend"
requires-python = ">=3.12"
license = { text = "MIT" }

dependencies = [
    # ── Web framework ──────────────────────────────────────────────────────────
    "fastapi==0.136.3",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",

    # ── LangGraph / LangChain (HITL-sensitive — pinned exactly per BLUEPRINT §10) ──
    # interrupt() / Command(resume=) / aget_state() APIs are version-sensitive.
    # Do NOT change these without re-validating HITL behaviour end-to-end.
    "langgraph==1.2.4",
    "langchain==1.3.7",
    "langchain-openai==1.3.0",
    "langgraph-checkpoint-postgres==3.1.0",

    # ── Pydantic ───────────────────────────────────────────────────────────────
    "pydantic>=2.9.0",
    "pydantic-settings==2.14.1",

    # ── Database (async-first) ─────────────────────────────────────────────────
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg==0.31.0",
    "psycopg[binary]>=3.2.0",
    "alembic>=1.14.0",

    # ── Vector DB ──────────────────────────────────────────────────────────────
    "qdrant-client==1.18.0",

    # ── Observability ──────────────────────────────────────────────────────────
    # Langfuse SDK: LangChain callback + OTel tracing. Cloud-hosted (no container needed).
    "langfuse==4.7.1",
    # LangSmith: native LangGraph tracing via LANGCHAIN_TRACING_V2 env var.
    "langsmith>=0.1.0",
    # OTel: HTTP spans, DB spans, custom agent spans.
    "opentelemetry-sdk==1.42.1",
    "opentelemetry-exporter-otlp-proto-http==1.42.1",
    "opentelemetry-instrumentation-fastapi>=0.63b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.63b0",
    "opentelemetry-instrumentation-httpx>=0.63b0",

    # ── Structured logging ─────────────────────────────────────────────────────
    "structlog>=24.4.0",

    # ── Retry (tool_retry decorator per BLUEPRINT §7) ──────────────────────────
    "tenacity==9.1.4",

    # ── Auth / Security ────────────────────────────────────────────────────────
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",

    # ── HTTP client ────────────────────────────────────────────────────────────
    "httpx>=0.28.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio==1.4.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "pre-commit>=4.0.0",
    "deepeval==4.0.6",
    # anyio trio backend for async tests
    "anyio[trio]>=4.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

# ── Ruff (lint + format) ───────────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "RUF"]
ignore = [
    "E501",    # line-too-long — handled by formatter, not linter
    "B008",    # function-call-in-default-argument — FastAPI Depends() pattern
    "RUF012",  # mutable-class-attributes — TypedDict fields are intentionally mutable
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

# ── Pytest ─────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=app --cov-report=term-missing --cov-fail-under=0"
